// file: proto/gcommon/v1/common/services/session_service.proto
edition = "2023";

package gcommon.v1.common.services;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/api/create_session_request.proto";
import "proto/gcommon/v1/common/api/create_session_response.proto";
import "proto/gcommon/v1/common/api/delete_session_request.proto";
import "proto/gcommon/v1/common/api/delete_session_response.proto";
import "proto/gcommon/v1/common/api/get_session_request.proto";
import "proto/gcommon/v1/common/api/get_session_response.proto";
import "proto/gcommon/v1/common/api/list_sessions_request.proto";
import "proto/gcommon/v1/common/api/list_sessions_response.proto";
import "proto/gcommon/v1/common/api/list_user_sessions_request.proto";
import "proto/gcommon/v1/common/api/list_user_sessions_response.proto";
import "proto/gcommon/v1/common/api/terminate_session_request.proto";
import "proto/gcommon/v1/common/api/terminate_session_response.proto";
import "proto/gcommon/v1/common/api/update_session_request.proto";
import "proto/gcommon/v1/common/api/update_session_response.proto";
import "proto/gcommon/v1/common/api/validate_session_request.proto";
import "proto/gcommon/v1/common/api/validate_session_response.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package gcommon.v1.common.services;

/**
 * SessionService manages user sessions and session lifecycle.
 * Provides session creation, validation, tracking, and termination
 * for stateful authentication and user activity monitoring.
 */
service SessionService {
  // Create a new session for an authenticated user
  rpc CreateSession(AuthCreateSessionRequest) returns (AuthCreateSessionResponse);

  // Get detailed information about a specific session
  rpc GetSession(AuthGetSessionRequest) returns (AuthGetSessionResponse);

  // Update session information (e.g., refresh activity timestamp)
  rpc UpdateSession(AuthUpdateSessionRequest) returns (AuthUpdateSessionResponse);

  // Validate a session and return session information
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);

  // Terminate a session (logout)
  rpc TerminateSession(TerminateSessionRequest) returns (TerminateSessionResponse);

  // Delete a specific session
  rpc DeleteSession(AuthDeleteSessionRequest) returns (AuthDeleteSessionResponse);

  // List all active sessions for a user
  rpc ListUserSessions(ListUserSessionsRequest) returns (ListUserSessionsResponse);

  // List all sessions (admin only)
  rpc ListSessions(AuthListSessionsRequest) returns (AuthListSessionsResponse);
}
